--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint:fix": "tslint --fix -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -24,7 +25,10 @@
     "@nestjs/core": "^5.4.0",
     "@nestjs/passport": "^5.1.0",
     "@nestjs/typeorm": "^5.2.2",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
+    "joi": "^14.3.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "pg": "^7.8.0",
