--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
+    "express-rate-limit": "^3.3.2",
+    "helmet": "^3.15.0",
+    "i": "^0.3.6",
     "joi": "^14.3.1",
+    "npm": "^6.5.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "pg": "^7.8.0",
