--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/swagger": "^2.5.1",
     "@nestjs/typeorm": "^5.2.2",
     "@types/bcrypt": "^3.0.0",
+    "@types/elasticsearch": "^5.0.31",
     "bcrypt": "^3.0.3",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
+    "elasticsearch": "^15.4.1",
     "express-rate-limit": "^3.3.2",
     "helmet": "^3.15.0",
     "i": "^0.3.6",
